# Greating_Agent_with_gemini

./: env_example  greating_agent.py  pyproject.toml
